<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/mail_foreground"
        android:ems="10"
        android:hint="@string/loginEmail"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/password_foreground"
        android:ems="10"
        android:hint="@string/loginPassword"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/loginbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="141dp"
        android:layout_height="46dp"
        android:fontFamily="monospace"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#4083E6"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/loginbutton"
        style="@style/Widget.Material3.Button"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#4083E6"
        android:text="@string/loginbutton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/registertxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registertxt"
        android:layout_width="122dp"
        android:layout_height="19dp"
        android:layout_marginBottom="64dp"
        android:text="@string/registertxt"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loginprogressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#FCA91C"
        android:progressTint="#FCA91C"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/loginforgotpassword"
        android:layout_width="122dp"
        android:layout_height="19dp"
        android:layout_marginBottom="48dp"
        android:text="@string/loginforgotpassword"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        app:layout_constraintVertical_bias="0.304" />

</androidx.constraintlayout.widget.ConstraintLayout>